--- a/FundamentosHTML_Isaac_Haiat/educacion.html
+++ b/FundamentosHTML_Isaac_Haiat/educacion.html
@@ -56,6 +56,9 @@
           <option>2017</option>
           <option>2016</option>
           <option>2015</option>
+          <option>2014</option>
+          <option>2013</option>
+          <option>2012</option>
         </select>
           </br>
         </br>
@@ -63,7 +66,7 @@
           <input type="text" name="Institución" required></br>
           </br>
           <label for="Lugar"><strong>Lugar:</strong></label></br>
-          <textarea name="Lugar" rows="5" cols="40"></textarea>
+          <textarea name="Lugar" rows="3" cols="40"></textarea>
         </br>
           <input type="submit" value="Enviar">
       </form>
