--- a/FundamentosHTML_Isaac_Haiat/index.html
+++ b/FundamentosHTML_Isaac_Haiat/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <title>Inicio</title>
+    <link rel="stylesheet" href="../FundamentosHTML_Isaac_Haiat/css/estilos.css">
       </head>
       <svg>
       <image xlink:href="../FundamentosHTML_Isaac_Haiat/img/logoihb.svg" width="300" height="150"/>
