--- a/FundamentosHTML_Isaac_Haiat/index.html
+++ b/FundamentosHTML_Isaac_Haiat/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <title>Inicio</title>
     <link rel="stylesheet" href="../FundamentosHTML_Isaac_Haiat/css/estilos.css">
-      </head>
+  </head id="Encabezado">
       <svg>
       <image xlink:href="../FundamentosHTML_Isaac_Haiat/img/logoihb.svg" width="300" height="150"/>
     </svg>
@@ -16,7 +16,7 @@
       <p>
       <a href="../FundamentosHTML_Isaac_Haiat/index.html">Inicio</a> | <a href="../FundamentosHTML_Isaac_Haiat/educacion.html">Educación</a> | <a href="../FundamentosHTML_Isaac_Haiat/experiencia.html">Experiencia</a>
       </p>
-  <body>
+  <body id="Contenedor">
 <h2>Información Personal</h2>
 </p>
 <img src="../FundamentosHTML_Isaac_Haiat/img/foto.jpg" alt="Foto" width="20%">
