--- a/CSSyDisenoWebResponsive _Isaac_Haiat/paisajes.html
+++ b/CSSyDisenoWebResponsive _Isaac_Haiat/paisajes.html
@@ -10,31 +10,24 @@
 	<div class="contenido">
 		<header class="header">
 				<div class="texto">
-				<h1>Comenzando con la Fotografía</h1>
+				<h1>Comenzando con los Paisajes</h1>
 				</div>
 				<nav class="nav">
 					<a href="#">Inicio</a>
-					<a href="../CSSyDisenoWebResponsive _Isaac_Haiat/Paisajes.html">Paisajes</a>
+					<a href="#">Paisajes</a>
 					<a href="#">Retratos</a>
 				</nav>
 		</header>
-		<section class="central">
-				<img src="imagenes/imagen2.jpg" alt="">
+		<section class="paisajes2">
+			<div class="contpaisajes">
+				<div><img src="imagenes/p1.jpg" alt="" class="impaisajes"></div>				<div><img src="imagenes/p1.jpg" alt="" class="impaisajes"></div>
+				<div><img src="imagenes/p1.jpg" alt="" class="impaisajes"></div>
+				<div><img src="imagenes/p1.jpg" alt="" class="impaisajes"></div>
+				<div><img src="imagenes/p1.jpg" alt="" class="impaisajes"></div>
+				<div><img src="imagenes/p1.jpg" alt="" class="impaisajes"></div>
+				<div><img src="imagenes/p1.jpg" alt="" class="impaisajes"></div>
+		</div>
 		</section>
-		<section class="secundarias">
-			<div class="paisajes">
-				<img src="imagenes/p1.jpg" alt="dff">
-				<h3>
-					<a href="#">Paisajes</a>
-				</h3>
-			</div>
-			<div class="retratos">
-				<img src="imagenes/r2.jpg" alt="fsdf">
-				<h3>
-					<a href="#">Retratos</a>
-				</h3>
-			</div>
-			</section>
 		<footer class="footer">
 				<div class="contacto">
 					<h3>Contacto</h3>
