--- a/CSSyDisenoWebResponsive _Isaac_Haiat/retratos.html
+++ b/CSSyDisenoWebResponsive _Isaac_Haiat/retratos.html
@@ -14,7 +14,7 @@
 				</div>
 				<nav class="nav">
 					<a href="#">Inicio</a>
-					<a href="../CSSyDisenoWebResponsive _Isaac_Haiat/Paisajes.html">Paisajes</a>
+					<a href="#">Paisajes</a>
 					<a href="#">Retratos</a>
 				</nav>
 		</header>
